--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fhmg.artosexchangeapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,19 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ArtosExchangeApp">
         <activity
-            android:name=".DetailActivity"
-            android:label="@string/activity_detail"
+            android:name=".SettingsActivity"
             android:exported="true"
-            android:parentActivityName=".MainActivity"/>
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity" />
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
             android:value=".MainActivity" />
         <activity
-            android:name=".MoneyCurrencyConverter">
+            android:name=".DetailActivity"
+            android:exported="true"
+            android:label="@string/activity_detail"
+            android:parentActivityName=".MainActivity" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.fhmg.artosexchangeapp.MainActivity" />
+            android:value=".MainActivity" />
+
+        <activity android:name=".MoneyCurrencyConverter">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.fhmg.artosexchangeapp.MainActivity" />
         </activity>
         <activity android:name=".create.CreateActivity" />
         <activity android:name=".pengeluaran.PengeluaranActivity">
